<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/dialog_vm_config_hint" />

    <RadioGroup
        android:id="@+id/vm_config_mode_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_vm_config_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_vm_config_auto" />

        <RadioButton
            android:id="@+id/radio_vm_config_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_vm_config_custom" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/vm_config_custom_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_vm_config_cpus" />

        <EditText
            android:id="@+id/vm_config_cpus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/dialog_vm_config_ram" />

        <EditText
            android:id="@+id/vm_config_ram_mib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/dialog_vm_config_tcg_tb" />

        <EditText
            android:id="@+id/vm_config_tcg_tb_mib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>
</LinearLayout>
