<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_display_mode_hint"
        android:paddingBottom="12dp" />

    <RadioGroup
        android:id="@+id/display_mode_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_display_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_display_mode_text" />

        <RadioButton
            android:id="@+id/radio_display_vnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_display_mode_vnc" />
    </RadioGroup>
</LinearLayout>
